--- a/DotNet/HydraScavengerService/HydraScavengerService/App.config
+++ b/DotNet/HydraScavengerService/HydraScavengerService/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="DailyCleanupTime" value="01:00"/>
+    <add key="PollIntervalSeconds" value="600"/>
     <add key="MessageExpiryDays" value="14"/>
     <add key="HydraServer" value="localhost"/>
     <add key="Database" value="hydra"/>
