--- a/DotNet/Examples/HydraStressTest/HydraStressTestClient/HydraStressTestClient.csproj
+++ b/DotNet/Examples/HydraStressTest/HydraStressTestClient/HydraStressTestClient.csproj
@@ -39,9 +39,8 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Reactive, Version=1.0.10621.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\General\Hydra\v0.2\System.Reactive.dll</HintPath>
+    <Reference Include="System.Reactive">
+      <HintPath>..\..\..\Libraries\System.Reactive.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Drawing" />
