--- a/DotNet/HydraScavengerService/HydraScavengerService/App.config
+++ b/DotNet/HydraScavengerService/HydraScavengerService/App.config
@@ -3,6 +3,7 @@
   <appSettings>
     <add key="PollIntervalSeconds" value="600"/>
     <add key="MessageExpiryDays" value="14"/>
+    <add key="DeleteBatchSize" value="1000"/>
     <add key="HydraServer" value="localhost"/>
     <add key="Database" value="hydra"/>
   </appSettings>
