Made port configurable, and both database name and port optional.

--- a/DotNet/HydraScavengerService/HydraScavengerService/App.config
+++ b/DotNet/HydraScavengerService/HydraScavengerService/App.config
@@ -7,5 +7,6 @@
     <add key="DeleteBatchSize" value="1000"/>
     <add key="HydraServer" value="localhost"/>
     <add key="Database" value="hydra"/>
+    <add key="Port" value="5984"/>
   </appSettings>
 </configuration>
