--- a/DotNet/Examples/PubSubByTypeExample/App.config
+++ b/DotNet/Examples/PubSubByTypeExample/App.config
@@ -3,6 +3,7 @@
   <appSettings>
     <add key="HydraServers" value="localhost"/>
     <add key="Database" value="hydra"/>
+    <add key="Port" value="5984"/>
     <add key="PollIntervalMs" value="2000"/>
   </appSettings>
   <startup>
