--- a/DotNet/Examples/PubSubByTypeExample/PubSubByTypeExample.csproj
+++ b/DotNet/Examples/PubSubByTypeExample/PubSubByTypeExample.csproj
@@ -83,7 +83,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Messaging\Messaging.csproj">
