--- a/DotNet/NuGet/Hydra-Messaging/Hydra-Messaging.nuspec
+++ b/DotNet/NuGet/Hydra-Messaging/Hydra-Messaging.nuspec
@@ -5,15 +5,16 @@
     <version>0.4.0</version>
     <authors>Nick North</authors>
     <owners>Nick North</owners>
-    <projectUrl>http://github.com/NorthNick/hydra/wiki</projectUrl>
+    <projectUrl>https://github.com/NorthNick/hydra/wiki</projectUrl>
+    <iconUrl>https://github.com/NorthNick/hydra/wiki/Images/Hydra128.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Core functionality for the Hydra distributed messaging system.</description>
     <releaseNotes>First NuGet release.</releaseNotes>
     <copyright>Copyright 2012</copyright>
-    <tags>Hydra Messaging</tags>
+    <tags>Hydra Messaging CouchDb</tags>
     <dependencies>
-      <dependency id="Rx-Main" version="2.0" />
-      <dependency id="Newtonsoft.Json" version="4.5" />
+      <dependency id="Rx-Main" version="1.0" />
+      <dependency id="Newtonsoft.Json" version="4.0.6" />
     </dependencies>
   </metadata>
 </package>
