--- a/DotNet/Messaging/Messaging.csproj
+++ b/DotNet/Messaging/Messaging.csproj
@@ -66,18 +66,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config\NearestServerConfigProvider.cs" />
-    <Compile Include="Config\PollingConfigProviderBase.cs" />
-    <Compile Include="Config\PreferenceOrderConfigProvider.cs" />
-    <Compile Include="Config\RoundRobinConfigProvider.cs" />
-    <Compile Include="Config\IConfigProvider.cs" />
-    <Compile Include="Config\ServerDistance.cs" />
-    <Compile Include="Config\ServerDistanceInfo.cs" />
+    <Compile Include="Storage\CouchDbStore.cs" />
+    <Compile Include="Storage\IStore.cs" />
+    <Compile Include="Storage\NearestServerProvider.cs" />
+    <Compile Include="Storage\PollingProviderBase.cs" />
+    <Compile Include="Storage\PreferenceOrderProvider.cs" />
+    <Compile Include="Storage\RoundRobinProvider.cs" />
+    <Compile Include="Storage\IProvider.cs" />
+    <Compile Include="Storage\ServerDistance.cs" />
+    <Compile Include="Storage\ServerDistanceInfo.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="HydraService.cs" />
     <Compile Include="IHydraService.cs" />
-    <Compile Include="IStore.cs" />
-    <Compile Include="CouchDbStore.cs" />
     <Compile Include="Listeners\ListenerOptions.cs" />
     <Compile Include="MessageFetchers\HydraByTopicByDestinationMessageFetcher.cs" />
     <Compile Include="MessageFetchers\HydraByTopicMessageFetcher.cs" />
