--- a/DotNet/Examples/PubSubByTypeExample/PubSubByTypeExample.csproj
+++ b/DotNet/Examples/PubSubByTypeExample/PubSubByTypeExample.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{58F561B9-296B-49F7-B65A-FE41BCB12C4F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bollywell.Messaging.PubSubByTypeExample</RootNamespace>
-    <AssemblyName>Bollywell.Messaging.PubSubByTypeExample</AssemblyName>
+    <RootNamespace>Shastra.Messaging.PubSubByTypeExample</RootNamespace>
+    <AssemblyName>Shastra.Messaging.PubSubByTypeExample</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
