--- a/DotNet/Tests/Tests.csproj
+++ b/DotNet/Tests/Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{675A6281-7C94-4709-A09D-25E394EB209B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bollywell.Hydra.Tests</RootNamespace>
-    <AssemblyName>Bollywell.Hydra.Tests</AssemblyName>
+    <RootNamespace>Shastra.Hydra.Tests</RootNamespace>
+    <AssemblyName>Shastra.Hydra.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
