--- a/Java/hydra-examples/pom.xml
+++ b/Java/hydra-examples/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
   		<groupId>uk.co.shastra.hydra</groupId>
   		<artifactId>hydra-parent</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
+  		<version>2.0.0</version>
 		<relativePath>../hydra-parent</relativePath>
 	</parent>
   <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
   	<dependency>
   		<groupId>uk.co.shastra.hydra</groupId>
   		<artifactId>hydra</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
+  		<version>2.0.0</version>
   	</dependency>
   </dependencies>
   <licenses>
