--- a/Java/hydra/pom.xml
+++ b/Java/hydra/pom.xml
@@ -3,8 +3,8 @@
 	<parent>
 		<groupId>uk.co.shastra.hydra</groupId>
 		<artifactId>hydra-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../hydra-parent/pom.xml</relativePath>
+		<version>2.0.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>hydra</artifactId>
@@ -66,6 +66,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -78,6 +79,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -90,6 +92,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
