Added ObservableGenerator to avoid Observable.Generator memory leak

--- a/DotNet/Tests/Tests.csproj
+++ b/DotNet/Tests/Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="ExtensionsTest.cs" />
     <Compile Include="MessageFetcherTest.cs" />
     <Compile Include="ListenerTest.cs" />
+    <Compile Include="ObservableGeneratorTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Messaging\Messaging.csproj">
