--- a/DotNet/Messaging/Messaging.csproj
+++ b/DotNet/Messaging/Messaging.csproj
@@ -94,7 +94,9 @@
     <Compile Include="MessageFetchers\MultiFetcher.cs" />
     <Compile Include="Listeners\IListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ObservableGenerator.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
