Add CouchDB service in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
 
+services:
+  - couchdb
+
 before_script:
-  cd Java/hydra-parent
+  - curl -X PUT localhost:5984/hydra
+  - cd Java/hydra-parent
