--- a/DotNet/NuGet/Hydra-PubSubByType/Hydra-PubSubByType.nuspec
+++ b/DotNet/NuGet/Hydra-PubSubByType/Hydra-PubSubByType.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Hydra-PubSubByType</id>
-    <version>2.1.0</version>
+    <version>2.2.0</version>
     <authors>Nick North</authors>
     <owners>Nick North</owners>
     <projectUrl>https://github.com/NorthNick/hydra/wiki</projectUrl>
@@ -10,10 +10,10 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Publications and subscription by type functionality for the Hydra distributed messaging system.</description>
     <releaseNotes>Beta NuGet release.</releaseNotes>
-    <copyright>Copyright 2013</copyright>
+    <copyright>Copyright 2013-2016</copyright>
     <tags>Hydra Messaging CouchDb</tags>
     <dependencies>
-      <dependency id="Hydra-Messaging" version="2.1.0" />
+      <dependency id="Hydra-Messaging" version="2.2.0" />
     </dependencies>
   </metadata>
 </package>
